[gd_scene load_steps=42 format=2]

[ext_resource path="res://Minigames/Earthquake World/scripts/zumbi.gd" type="Script" id=1]
[ext_resource path="res://Minigames/Earthquake World/characters/Zumbi-Sprite.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 117 ]
}

[sub_resource type="Animation" id=5]
resource_name = "atack-back"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 182, 182, 183, 184, 185, 186, 187 ]
}

[sub_resource type="Animation" id=6]
resource_name = "atack-front"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 156, 156, 157, 158, 159, 160, 161 ]
}

[sub_resource type="Animation" id=7]
resource_name = "atack-left"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 169, 169, 170, 171, 172, 173, 174 ]
}

[sub_resource type="Animation" id=8]
resource_name = "atack-right"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 195, 195, 196, 197, 198, 199, 200 ]
}

[sub_resource type="Animation" id=9]
resource_name = "dead-back"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true

[sub_resource type="Animation" id=10]
resource_name = "idle-back"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 26, 27, 28, 29, 30, 31, 32 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle-front"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle-left"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=13]
resource_name = "idle-right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 39, 40, 41, 42, 43, 44, 45 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 117, 117, 118, 119, 120, 121, 122, 123, 124, 125 ]
}

[sub_resource type="Animation" id=14]
resource_name = "walk-back"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 130, 130, 131, 132, 133, 134, 135, 136, 137, 138 ]
}

[sub_resource type="Animation" id=15]
resource_name = "walk-front"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 104, 105, 106, 107, 108, 109, 110, 111, 112 ]
}

[sub_resource type="Animation" id=16]
resource_name = "walk-left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 117, 117, 118, 119, 120, 121, 122, 123, 124, 125 ]
}

[sub_resource type="Animation" id=17]
resource_name = "walk-right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 143, 143, 144, 145, 146, 147, 148, 149, 150, 151 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 120.0

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idle-left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "idle-front"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle-back"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "idle-right"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
auto_triangles = false
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 1, 0 )
triangles = PoolIntArray( 0, 1, 3, 0, 2, 3 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "dead-back"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "dead-back"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "dead-back"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "dead-back"

[sub_resource type="AnimationNodeBlendSpace2D" id=44]
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( -1, 0.1 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 1, 0.1 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 0, -0.9 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "walk-left"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "walk-back"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "walk-right"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "walk-front"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachine" id=29]
states/Idle/node = SubResource( 22 )
states/Idle/position = Vector2( 552, 134 )
states/dead/node = SubResource( 44 )
states/dead/position = Vector2( 370, 134 )
states/walk/node = SubResource( 27 )
states/walk/position = Vector2( 742, 134 )
transitions = [ "Idle", "walk", SubResource( 28 ), "walk", "Idle", SubResource( 37 ), "Idle", "dead", SubResource( 45 ), "dead", "Idle", SubResource( 46 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=30]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 9, 12 )

[node name="zumbi" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 50

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/atack-back = SubResource( 5 )
anims/atack-front = SubResource( 6 )
anims/atack-left = SubResource( 7 )
anims/atack-right = SubResource( 8 )
anims/dead-back = SubResource( 9 )
anims/idle = SubResource( 2 )
anims/idle-back = SubResource( 10 )
anims/idle-front = SubResource( 11 )
anims/idle-left = SubResource( 12 )
anims/idle-right = SubResource( 13 )
anims/walk = SubResource( 3 )
anims/walk-back = SubResource( 14 )
anims/walk-front = SubResource( 15 )
anims/walk-left = SubResource( 16 )
anims/walk-right = SubResource( 17 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 13
vframes = 21
frame = 117

[node name="detection" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="detection"]
visible = false
position = Vector2( 0, 2 )
z_index = 1
shape = SubResource( 4 )

[node name="animationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 29 )
anim_player = NodePath("../animation")
active = true
parameters/playback = SubResource( 30 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/dead/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="collisionArea" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="collisionArea"]
position = Vector2( 0, 3 )
shape = SubResource( 39 )

[connection signal="animation_finished" from="animation" to="." method="_on_kill_animation_finished"]
[connection signal="area_entered" from="detection" to="." method="_on_detection_area_entered"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="area_entered" from="collisionArea" to="." method="_on_collisionArea_area_entered"]
